# agent-runtime-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
apps/api/: main.py  runtime.py
apps/api/routes/: decide.py  feedback.py  replay.py
apps/console/: streamlit_app.py
apps/proxy/: main.py
assets/: crown_jewels.py
detections/llm_security/: prompt_injection.py  rag_indirect_injection.py
detections/rules/: exfil_rules.py  identity_rules.py  tool_abuse_sequence.py
fabric/: correlator.py  normalizer.py
feedback/: analyst_review.py  tuning_recommender.py
ingestion/: base.py  identity_connector.py  llm_gateway_connector.py
policy/: policy_engine.py  tool_policy.py
response/: orchestrator.py
risk/: risk_engine.py
schemas/: event.py
scripts/: smoke_runner.py
storage/: sqlite_feedback_store.py  sqlite_store.py
tests/replay/: test_api_contract.py  test_detections.py  test_feedback_store.py  test_prompt_to_egress_chain.py  test_sqlite_store.py  test_tuning_recommender.py
