[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-guard"
version = "0.1.0"
description = "AI agent runtime security gateway — detect and block malicious prompt/tool/egress chains before execution"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "requests>=2.31",
    "httpx>=0.27",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = [
    "schemas*",
    "assets*",
    "ingestion*",
    "fabric*",
    "detections*",
    "risk*",
    "policy*",
    "response*",
    "feedback*",
    "storage*",
    "apps*",
    "scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
